--- a/pom.xml
+++ b/pom.xml
@@ -24,6 +24,16 @@
             <artifactId>telegrambots</artifactId>
             <version>6.5.0</version>
         </dependency>
+        <dependency>
+            <groupId>org.example</groupId>
+            <artifactId>JavaBotProject</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>io.github.cdimascio</groupId>
+            <artifactId>dotenv-java</artifactId>
+            <version>3.0.0</version>
+        </dependency>
     </dependencies>
 
 </project>
